--- a/setup.cfg
+++ b/setup.cfg
@@ -1,10 +1,17 @@
 [metadata]
 description-file = README.md
 license-file = LICENSE
-version = 0.0.1
 
 [aliases]
 test=pytest
 
 [flake8]
 max-line-length = 79
+
+[versioneer]
+VCS = git
+style = pep440
+versionfile_source = src/minerva_lib/_version.py
+versionfile_build = minerva_lib/_version.py
+tag_prefix = v
+parentdir_prefix = minerva-lib-
