Skip building CPython 2.7, 3.9 and PyPy wheels.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,6 +6,9 @@ on:
     tags:
       - '*'
 
+env:
+  CIBW_SKIP: 'cp27-* cp39-* pp*'
+
 jobs:
   build_wheels:
     name: Build wheels on ${{ matrix.os }}
